# supervisor-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh  todo.org
src/: child.rs  client.rs  communication.rs  keys_handler.rs  kindergarten.rs  lib.rs  logger.rs  main.rs  server.rs  timer.rs
src/child/: child_hook.rs  child_output.rs  child_repeat.rs
src/client/: command.rs
src/server/: mod.rs
test/: argv.yaml  argv.yml  ls.yaml  server.yml
test/client/: ls.yml
