[package]
name = "supervisor-rs"
version = "0.8.5"
authors = ["ccQpein"]
edition = "2021"
description = "Manage (Start/Stop/Restart/etc.) processings on server."
license = "MIT"
repository = "https://github.com/ccqpein/supervisor-rs"
readme = "README.md"

[dependencies]
yaml-rust = "0.4"
chrono = { version = "0.4", features = ["serde"] }
openssl = { version = "0.10", features = ["vendored"] }
ssh2 = "0.9"

[[bin]]
name = "supervisor-rs-server"
path = "src/bin/server.rs"

[[bin]]
name = "supervisor-rs-client"
path = "src/bin/client.rs"
